Prevent "view" links from wrapping

--- a/site/resume/styles.css
+++ b/site/resume/styles.css
@@ -7,3 +7,7 @@ h3 {
 .card img {
   border: 1px dashed gray;
 }
+
+a[target], a[data-id] {
+  white-space: nowrap;
+}
